[package]
name = "checkluhn"
version = "0.0.1"
description = "Validate the Luhn algorithm for the given string"
author = ["Marirs <marirs@gmail.com>", "Kamran Amini <kam.cpp@gmail.com>"]
keywords = ["luhn", "validate", "algorithm"]
categories = ["algorithms"]
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/marirs/checkluhn-rs"
homepage = "https://github.com/marirs/checkluhn-rs"
edition = "2018"

[badges]
travis-ci = { repository = "marirs/checkluhn-rs" }

[lib]
name = "checkluhn"
path = "src/lib.rs"

[profile.dev]
opt-level = 3

[profile.release]
codegen-units = 1
debug-assertions = false
debug = false
opt-level = 3
lto = true


